--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CodeEditor</string>
-    <string name="file">File</string>
+    <string name="file">file</string>
+    <string name="git">git</string>
 </resources>
