--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">CodeEditor</string>
-    <string name="file">file</string>
-    <string name="git">git</string>
+    <string name="file">File</string>
+    <string name="git">Git</string>
     <string name="open_hint">
         To start editing open or create
             new file or project
