First part of integration to new design of File Explorer.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="app_name">CodeEditor</string>
     <string name="file">File</string>
     <string name="git">Git</string>
+    <string name="file_explorer">File Explorer</string>
+    <string name="back">Back</string>
+    <string name="exit">Exit</string>
+    <string name="new_file">New\nFile</string>
+    <string name="new_folder">New\nFolder</string>
+    <string name="device">Device</string>
     <string name="open_hint">
         To start editing open or create
             new file or project
